# spi-platform

./: .gitignore  LICENSE  README.md  pyproject.toml
backend/: README.md
backend/core/: settings.py
backend/forms-wrapper/: example.py  field_matcher.py  form_reader.py  post_form.py  requirements.txt
core/: api.py  settings.py  urls.py
events/: admin.py  api.py  models.py  recommender.py  regform.py  views.py
events/migrations/: 0001_initial.py  0002_remove_event_date_event_date_end_event_date_start.py  0003_eventregistration.py  0004_rename_date_end_event_event_end_and_more.py  0005_remove_eventregistration_approved_and_more.py  0006_event_organization.py  0007_alter_event_organization.py  0008_event_is_published.py  0009_event_form_alter_event_description_and_more.py  0010_eventregistration_form_answer.py  0011_event_form_type_event_form_url_event_image.py  (+8 more)
forms-wrapper/: field_matcher.py  form_reader.py  llm_api.py  prefill_url.py
forms_wrapper/: example.py  field_matcher.py  form_reader.py  llm_api.py  post_form.py  prefill_url.py
frontend/: README.md
helpers/: nd_array_field.py
llm_seeder/: generate_events.py  generate_organizations.py  generate_tags.py
organizations/: admin.py  api.py  models.py
swipes/: admin.py  api.py  ml.py  models.py
templates/: about.html  auth.html  event_detail.html  event_edit.html  event_editor.html  home.html  org_dashboard.html  organizer.html  profile.html  sphere.html  swipe.html
tests/: conftest.py  test_api_flow.py  test_domain_logic.py
tinder/: ml.py
users/: admin.py  api.py  models.py  views.py
(+17 files in other folders)
