[tool.poetry]
name = "spi-platform"
version = "0.1.0"
description = ""
authors = ["Вячеслав Чертан <slavakemdev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^6.0.3"
django-ninja = "^1.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
